--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -51,7 +51,7 @@ hr.small {
   border-color: #FFFFFF;
 }
 .navbar-custom {
-  background: white;
+  background: black;
   position: absolute;
   top: 0;
   left: 0;
@@ -70,11 +70,11 @@ hr.small {
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom {
-    background: transparent;
+    background: black;
     border-bottom: 1px solid transparent;
   }
   .navbar-custom .navbar-brand {
-    color: white;
+    color: black;
     padding: 20px;
   }
   .navbar-custom .navbar-brand:hover,
@@ -82,7 +82,7 @@ hr.small {
     color: rgba(255, 255, 255, 0.8);
   }
   .navbar-custom .nav li a {
-    color: white;
+    color: black;
     padding: 20px;
   }
   .navbar-custom .nav li a:hover,
