--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p class="copyright text-muted"> Copyright © </p>
+                <p class="copyright text-muted"> Copyright © <a href="https://github.com/d6rks1lv3rz3r0" >SilverZero</a> </p>
             </div>
         </div>
     </div>
