--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -74,7 +74,7 @@ hr.small {
     border-bottom: 1px solid transparent;
   }
   .navbar-custom .navbar-brand {
-    color: black;
+    color: rgb(255, 255, 255);
     padding: 20px;
   }
   .navbar-custom .navbar-brand:hover,
@@ -82,7 +82,7 @@ hr.small {
     color: rgba(255, 255, 255, 0.8);
   }
   .navbar-custom .nav li a {
-    color: black;
+    color: rgb(255, 255, 255);
     padding: 20px;
   }
   .navbar-custom .nav li a:hover,
